Fix Alignment of moreIndicator

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ body {
 	z-index: 3;
 	opacity: .8;
 	top: 0px;
+	vertical-align: middle;
 }
 
 .thumbnail {
